--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,142 @@
-/* your code here */
+body {
+    background-color: #10E37F;
+
+}
+
+.container {
+    margin: 0px auto;
+    width: fit-content;
+    align-items: center;
+    display: flex;
+    margin-top: 50px;
+
+}
+
+.product_details {
+    width: 550px;
+    background-color: aliceblue;
+    height: 600px;
+    display: flex;
+
+}
+
+.product_img {
+    width: 280px;
+    height: 500px;
+    border-radius: 10px;
+    position: relative;
+    left: 180px;
+    top: 5px;
+    /* margin-top: 7%; */
+    display: flex;
+    flex-direction: column;
+    box-shadow: 10px 7px 24px -5px rgba(0, 0, 0, 0.47);
+
+}
+
+.details_first {
+    flex: 0.4;
+    background-color: rgb(251, 249, 249);
+}
+
+.details_second {
+    flex: 0.6;
+    background-color: rgb(248, 245, 250);
+    padding: 20px 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.code_text {
+    font-size: 12px;
+    opacity: 0.5;
+    font-weight: bold;
+}
+
+.rs {
+    color: red;
+    font-size: 20px;
+}
+
+.price {
+    font-size: 70px;
+}
+
+.button {
+    height: 50px;
+    width: 130px;
+    font-size: 16px;
+    margin-top: 10px;
+    text-align: center;
+    font-size: medium;
+
+    color: white;
+    background-color: #FE3F40;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 3px 2px 3px rgb(177, 174, 174);
+}
+
+.button:hover {
+    cursor: pointer;
+    background-color: rgb(192, 194, 195);
+}
+
+.select_color {
+    margin: 30px auto;
+    border: 2px 2px rgb(22, 20, 20);
+}
+
+.newdivimg {
+    border: 2px solid rgb(152, 150, 150);
+}
+
+.select_color :hover {
+
+    cursor: pointer;
+    border: 2px solid rgb(118, 116, 116);
+
+}
+
+.benefits {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    line-height: 1.6;
+}
+
+.top {
+    flex: 0.8;
+    background: radial-gradient(#f4f4f4 30%, #adff2f 70%);
+    border-radius: 10px 10px 0px 0px;
+
+}
+
+.bottom {
+    flex: 0.2;
+    background-color: white;
+    padding-top: 20px;
+    padding-left: 10px;
+    border-radius: 0px 0px 10px 10px;
+
+}
+
+.appleimg {
+    position: absolute;
+    left: -100px;
+    height: 300px;
+    top: 25px;
+}
+
+.apple_img {
+    border: 1px solid grey;
+    transform: scale(0.9);
+}
+
+.ion {
+    color: #f4f4f4;
+    margin: 10px;
+}
+
+.ion2 {
+    float: right;
+    color: #f4f4f4;
+}
