--- a/styles.css
+++ b/styles.css
@@ -48,13 +48,13 @@ body{
     font-size: 20px;
 }
 .cost_price{
-    font-size: 40px; 
+    font-size: 80px; 
 }
 .color_image:hover{
     border: 1px solid black;
-    border-radius: 5px;
-    transform: scale(0.9);
     cursor: pointer;
+    transform: 0.9;
+    border-radius: 5px;
 
 }
 .image_container{
@@ -64,25 +64,30 @@ li{
     font-size: 13px;
 }
 .add_to_cart_btn{
+    padding: 20px 35px;
+    color: white;
     background-color: red;
-    color:white;
-    padding:20px 35px;
-    border:none;
+    border: none;
     border-radius: 10px;
     box-shadow: 2px 2px 25px -5px grey;
+    font-weight: 900;
+    font-size: 19px;
+
 }
 .top-section{
     flex:0.8;
+    
   background: radial-gradient(#f4f4f4 30%, #adff2f 70%);
   border-radius: 10px 10px 0px 0px;
 }
 .bottom-section{
-    flex:0.2;
+    flex: 0.2;
     background-color: white;
     padding-top: 20px;
     padding-left: 20px;
     border-radius: 0px 0px 10px 10px;
 }
+
 .apple-image{
     position: absolute;
     left:-100px;
@@ -90,17 +95,22 @@ li{
     top:25px;
 }
 .apple_ima{
-    border:0.1px solid grey;
-    /* transform: scale(0.9); */
+    border: 0.5px solid grey;
+    transform: scale(1);
+    
 }
 .icon1{
     color:white;
     margin:10px;
+    margin-top: 10px;
+
 }
 .icon2{
     color:white;
     float: right;
     margin:15px;
+    margin-top: 10px;
+
 }
 .apple_ima:hover{
     transform: scale(0.9);
